firmware/defmt-test/macros/tests/ui/teardown-has-ignore-macro.stderr
error: `#[ignore]` is not allowed on the `#[teardown]` function
 --> tests/ui/teardown-has-ignore-macro.rs:7:8
  |
7 |     fn teardown() {}
  |        ^^^^^^^^
