firmware/defmt-test/macros/tests/ui/teardown-has-ignore-macro.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[teardown]
    #[ignore]
    fn teardown() {}
}
